<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.example.ormliteteste.ContaCadastro">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero"/>

    <EditText
        android:id="@+id/edt_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ag_ncia"/>

    <EditText
        android:id="@+id/edt_agencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saldo"/>

    <EditText
        android:id="@+id/edt_saldo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo"/>

    <RadioButton
        android:id="@+id/db_corrente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="rbClick"
        android:text="@string/corrente"/>

    <RadioButton
        android:id="@+id/db_poupanca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="rbClick"
        android:text="@string/poupan_a"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:onClick="salvar"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:drawableStart="@drawable/ic_save_white_24dp"
        android:drawableEnd="@drawable/ic_save_white_24dp"/>

</LinearLayout>
